# Frames

./: Cargo.toml  readme.md
.claude/commands/: audit.md
DOCS/: DECISIONS.md  futures.md  plan.md  theme-spec.md
DOCS/research/: app_launcher.md  bootstrap.md  config-migration.md  config-overhaul.md  launcher-improvements.md  mpris.md  theming.md  volume-event-driven.md  weather.md  widget-candidates.md  workspaces-event-driven.md
crates/frames_bar/src/: css.rs  main.rs
crates/frames_bar/src/widgets/: battery.rs  brightness.rs  clock.rs  cpu.rs  disk.rs  launcher.rs  media.rs  memory.rs  network.rs  volume.rs  weather.rs  workspaces.rs
crates/frames_core/: Cargo.toml
crates/frames_core/src/: config.rs  lib.rs  widget.rs
crates/frames_core/src/widgets/: disk.rs  media.rs  (+2 more)
crates/frames_core/tests/: config_roundtrip.rs
crates/parapet_bar/: Cargo.toml
crates/parapet_bar/src/: bar.rs  css.rs  main.rs
crates/parapet_bar/src/widgets/: battery.rs  brightness.rs  clock.rs  cpu.rs  disk.rs  launcher.rs  media.rs  memory.rs  mod.rs  network.rs  volume.rs  weather.rs  workspaces.rs
crates/parapet_bar/tests/: bar_window.rs
crates/parapet_bar/themes/: default.css
crates/parapet_core/: Cargo.toml
crates/parapet_core/src/: config.rs  error.rs  lib.rs  poll.rs  widget.rs
crates/parapet_core/tests/: config_roundtrip.rs  poller_intervals.rs  widget_update.rs
standards/: ARCHITECTURE.md  BAR_DESIGN.md  BUILD_GUIDE.md  CODING_STANDARDS.md  CONFIG_MODEL.md  PLATFORM_COMPAT.md  RELEASE_GUIDE.md  RULE_OF_LAW.md  TESTING_GUIDE.md  UI_GUIDE.md  WIDGET_API.md
(+11 files in other folders)
