[package]
name = "parapet_bar"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
parapet_core = { path = "../parapet_core" }
gtk.workspace = true
gdk.workspace = true
glib.workspace = true
gio.workspace = true
fuzzy-matcher.workspace = true
libc.workspace = true
ctrlc.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
